# PinkNoiseForHomepod

./: .clang-format  .gitmodules  CMakeLists.txt  buildCProgram.sh  install_clangformat_hook.sh  main.cpp  main.mm  setHomePodAsOutput.applescript  startup.sh
clangFormatHook/: pre-commit
homepod-backend/: package-lock.json  package.json  server.js
homepod-web-app/: .env  package-lock.json  package.json
homepod-web-app/src/: App.css  App.js
